k8s/base/jin-core/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: jin-core
  namespace: jin
  labels:
    app.kubernetes.io/name: jin-core
spec:
  selector:
    app.kubernetes.io/name: jin-core
  ports:
    - name: http
      port: 3000
      targetPort: http
